--- a/ASY.html
+++ b/ASY.html
@@ -11,12 +11,13 @@
     <h1>new terminal</h1>
     <h1>eg. D:\CFA\Angular-13</h1>
     <h1>D:\CFA\Angular-13>git pull origin main</h1>
-    <h1>D:\CFA\Angular-13>git branch amruta-dev</h1>
-    <h1>git checkout amruta-dev</h1>
-    <h1>vscode-new file-amruta-dev.html</h1>
+    <h1>D:\CFA\Angular-13>git branch ASY-dev</h1>
+    <h1>git checkout ASY-dev</h1>
+    <h1>vscode-new file-ASY-dev.html</h1>
     <h1>save this file</h1>
     <h1>git config--gloabal user.email"--.com"</h1>
     <h1> git config --global user.name "Your Name"</h1>
+    <h1>git push origin ASY-dev=sign in</h1>
 
 </body>
 </html>
