--- a/amol-dev.html
+++ b/amol-dev.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<<<<<<< HEAD
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>this file from gk</h1>
-=======
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>This file gk</h1>
->>>>>>> 85321983e1d5d9aab61cab67b14a6850b09c897a
+    add new code in amol dev
 </body>
 </html>
