--- a/rahul.dev.html
+++ b/rahul.dev.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is my first controbution</p>
+    <p>this is my first contribution</p>
+    <h1>Hello World</h1>
+    <h1>Code First Academy</h1>
     
 </body>
 </html>
