--- a/gk-dev.html
+++ b/gk-dev.html
@@ -13,7 +13,6 @@
       itaque fugit sunt provident veniam animi est hic velit ipsam, tenetur
       eaque facilis vero facere saepe. Voluptates, tempora veritatis.
     </p>
-    <p>Code added by rahul</p>
-    <p>test</p>
+    <p>This is my First Contrubution</p>
   </body>
 </html>
