--- a/food/index.html
+++ b/food/index.html
@@ -25,6 +25,15 @@
 <body>
     <!-- header part -->
         <header>
+            <nav class="navbar bg-dark ">
+                <div class="container-fluid">
+                  <a class="navbar-brand text-white fs-1" href="#">
+                    <img src="images/main/pizza.jpg" alt="Logo" width="60" height="60" class="d-inline-block align-text-middle">
+                    Pizza
+                  </a>
+                  
+                </div>
+              </nav>
             
         </header>
 
