--- a/Rahul/Project/index.html
+++ b/Rahul/Project/index.html
@@ -41,7 +41,7 @@
             <div class="row header-bottom">
                 <div class="col-3">
                     <div class="header-logo">
-                        <img src="img/logo.png.webp" alt="">
+                        <img src="img/Logo.webp" alt="">
                     </div>
                 </div>
                 <div class="col-9">
@@ -201,6 +201,26 @@
         </div>
     </header>
     <!-- End of Header Section -->
+
+    <!-- Second Section Start-->
+    <section>
+        <div>
+            <div class="bg-img">
+                <div class="slider-text text-white">
+                    <h1>
+                        Education Needs <br> Complate Solution
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque unde, at molestias voluptatem
+                        praesentium quia magnam? Iste aliquam, voluptas sapiente animi, repudiandae officiis voluptatem
+                        tempore alias nihil. Aperiam voluptatum, velit.
+                    </p>
+                    <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Courses</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of Second Section-->
 
 </body>
 
