--- a/Rahul/Project/index.html
+++ b/Rahul/Project/index.html
@@ -215,12 +215,45 @@
                         praesentium quia magnam? Iste aliquam, voluptas sapiente animi, repudiandae officiis voluptatem
                         tempore alias nihil. Aperiam voluptatum, velit.
                     </p>
-                    <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Courses</a>
+                    <a href="#" class="btn btn-primary button-default btn-lg active" role="button"
+                        aria-pressed="true">View Courses</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- End of Second Section-->
+
+    <!-- About Section Start-->
+    <section>
+        <div class="about-section">
+            <div class="container ">
+                <div class="row">
+                    <div class="col-7">
+                        <div class="about-container">
+                            <h1> Provoid Best <span> Education </span> <br> <span> Services </span> For You </h1>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look even slightly believable.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eligendi expedita,
+                                provident cupiditate in excepturi.</p>
+                            <a href="#" class="btn btn-primary button-default btn-lg active" role="button"
+                                aria-pressed="true">Learn
+                                More</a>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="about-image">
+                            <img src="img/About-1.webp" alt="About Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of About Section -->
+
+
+
 
 </body>
 
