--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -127,7 +127,7 @@
       <div class="row ps-2 pe-2 mt-5 d-flex justify-content-around">
         <div class="  col-xl-3 col-sm-12 col-12 col-lg-3 col-md-3   d-flex justify-content-around">
           <div class="card h-100 w-100">
-            <img src="/images/cat-1.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
+            <img src="/yashwebsite/images/cat-1.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
             <div class="card-body">
               <p class=" card-text card-text d-flex justify-content-center align-items-center ">Development <br>
                 6 courses</p>
@@ -136,7 +136,7 @@
         </div>
         <div class="  col-xl-3 col-sm-12 col-12 d col-lg-3 col-md-3 d-flex justify-content-around">
           <div class="card   h-100 w-100">
-            <img src="/images/cat-5.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
+            <img src="/yashwebsite/images/cat-5.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
             <div class="card-body">
               <p class=" card-text card-text d-flex justify-content-center align-items-center ">Development <br>
                 6 courses</p>
@@ -145,7 +145,7 @@
         </div>
         <div class="  col-xl-3 col-sm-12 col-12 col-lg-3 col-md-3   d-flex justify-content-around">
           <div class="card h-100 w-100">
-            <img src="/images/cat-3.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
+            <img src="/yashwebsite/images/cat-3.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
             <div class="card-body">
               <p class=" card-text card-text d-flex justify-content-center align-items-center ">Development <br>
                 6 courses</p>
@@ -154,7 +154,7 @@
         </div>
         <div class="  col-xl-3 col-sm-12 col-12 col-lg-3 col-md-3   d-flex justify-content-around">
           <div class="card h-100 w-100">
-            <img src="/images/cat-4.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
+            <img src="/yashwebsite/images/cat-4.jpg" class=" card-images img-fluid card-img-top p-2" alt="...">
             <div class="card-body">
               <p class=" card-text card-text d-flex justify-content-center align-items-center ">Development <br>
                 6 courses</p>
@@ -181,7 +181,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
               <div class="col">
                 <div class="card h-100">
-                  <img src="/images/course-3.jpg" class="card-img-top" alt="...">
+                  <img src="/yashwebsite/images/course-3.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title card-text-2-num">$15.00</h5>
                     <p class="card-text card-text-2">Nutrition: Build Your Perfect Diet & Meal Plan.</p>
@@ -194,7 +194,7 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="/images/course-4.jpg" class="card-img-top" alt="...">
+                  <img src="/yashwebsite/images/course-4.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title card-text-2-num">$29.00</h5>
                     <p class="card-text card-text-2">WordPress Master Class for Beginners</p>
@@ -207,7 +207,7 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="/images/course-5.jpg" class="card-img-top" alt="...">
+                  <img src="/yashwebsite/images/course-5.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title card-text-2-num">Free</h5>
                     <p class="card-text card-text-2">The Complete JavaScript Course 2022</p>
@@ -224,7 +224,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="/images/course-9.jpg" class="card-img-top" alt="...">
+              <img src="/yashwebsite/images/course-9.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title card-text-2-num">$19.00</h5>
                 <p class="card-text card-text-2">Ultimate Photoshop Training: From Beginner</p>
@@ -236,7 +236,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/images/course-10.jpg" class="card-img-top" alt="...">
+              <img src="/yashwebsite/images/course-10.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title card-text-2-num">$12.00</h5>
                 <p class="card-text card-text-2">User Experience Design Essentials</p>
@@ -248,7 +248,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/images/course-11.jpg" class="card-img-top" alt="...">
+              <img src="/yashwebsite/images/course-11.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title card-text-2-num">$17.00</h5>
                 <p class="card-text card-text-2">Complete Blender Creator: Learn 3D Modelling</p>
@@ -272,7 +272,7 @@
     <div class="container  row row-cols-1 row-cols-md-3 d-flex justify-content-center  align-items-center">
       <div
         class=" img-text-container  p-0  col-6 col-xl-6 col-sm-12 col-12 col-lg-6 col-md-12 d-flex justify-content-end  align-items-center">
-        <img src="/images/img-1-girl.jpg" class="girl-1 img-fluid" alt="">
+        <img src="/yashwebsite/images/img-1-girl.jpg" class="girl-1 img-fluid" alt="">
       </div>
       <div class="  img-text-container p-0 col-6 col-xl-6 col-sm-12 col-12 col-lg-6 col-md-12">
         <div class="justify-content-start  card-text  text-container-offer img-text-container-2 ">
@@ -314,7 +314,7 @@
                     elit. Phasellus hendrerit. aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis.
                   </p>
                   <div class="container d-flex ">
-                    <div class=""><img src="/images/client-1.jpg" class="clients mt-5 me-2  img-fluid" alt=""></div>
+                    <div class=""><img src="/yashwebsite/images/client-1.jpg" class="clients mt-5 me-2  img-fluid" alt=""></div>
                     <h6 class="text-dark mt-5 ms-5">
                       Adam Smith <br>
                       Graphics Designer</h6>
@@ -331,7 +331,7 @@
                     elit. Phasellus hendrerit. aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis.
                   </p>
                   <div class="container d-flex  justify-content-end">
-                    <div class=""><img src="/images/client-2.jpg" class="clients mt-5 me-2 img-fluid" alt=""></div>
+                    <div class=""><img src="/yashwebsite/images/client-2.jpg" class="clients mt-5 me-2 img-fluid" alt=""></div>
                     <h6 class="text-dark mt-5 ms-5">
                       Adam Smith <br>
                       Graphics Designer</h6>
@@ -347,7 +347,7 @@
                   <p class="card-text text-left text-secondary pt-5">Lorem ipsum dolor sit amet, consectetuer adipiscing
                     elit. Phasellus hendrerit. aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis</p>
                   <div class="container d-flex ">
-                    <div class=""><img src="/images/client-3.jpg" class="clients mt-5 me-2 img-fluid " alt=""></div>
+                    <div class=""><img src="/yashwebsite/images/client-3.jpg" class="clients mt-5 me-2 img-fluid " alt=""></div>
                     <h6 class="text-dark mt-5 ms-5">
                       Adam Smith <br>
                       Graphics Designer</h6>
@@ -391,7 +391,7 @@
         <div class="col-12 col-sm-12 col-xl-4 col-xxl-4 col-md-12">
           <div class="container">
             <div class="d-flex ">
-              <img src="/images/ribbon.svg" class="svg-image-logo me-3 " alt="">
+              <img src="/yashwebsite/images/ribbon.svg" class="svg-image-logo me-3 " alt="">
               <h5> High Quality Courses</h5>
             </div>
 
@@ -399,7 +399,7 @@
           </div>
           <div class="container">
             <div class="d-flex ">
-              <img src="/images/folder.svg" class="svg-image-logo me-3" alt="">
+              <img src="/yashwebsite/images/folder.svg" class="svg-image-logo me-3" alt="">
               <h5> Life Time Access</h5>
             </div>
 
@@ -411,7 +411,7 @@
         <div class="col-12 col-sm-12 col-xl-4 col-xxl-4 col-md-12">
           <div class="container">
             <div class="d-flex ">
-              <img src="/images/teacher.svg" class="svg-image-logo me-3" alt="">
+              <img src="/yashwebsite/images/teacher.svg" class="svg-image-logo me-3" alt="">
               <h5>Expert Instructors</h5>
             </div>
 
@@ -421,7 +421,7 @@
           </div>
           <div class="container">
             <div class="d-flex ">
-              <img src="/images/24-hours.svg" class="svg-image-logo me-3" alt="">
+              <img src="/yashwebsite/images/24-hours.svg" class="svg-image-logo me-3" alt="">
               <h5>Dedicated Support</h5>
             </div>
 
@@ -442,27 +442,27 @@
     <div class="container">
       <div class="row d-flex justify-content-around">
         <div class="card p-2" style="width: 18rem;">
-          <img src="/images/instructor-1.jpg" class="card-img-top" alt="...">
+          <img src="/yashwebsite/images/instructor-1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text"><h4> Shane Warne</h4>
 
               Instructor</p>
           </div>
         </div><div class="card p-2" style="width: 18rem;">
-          <img src="/images/instructor-2.jpg" class="card-img-top" alt="...">
+          <img src="/yashwebsite/images/instructor-2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text"><h4> Avelina Smith</h4>
               Instructor.</p>
           </div>
         </div><div class="card p-2" style="width: 18rem;">
-          <img src="/images/instructor-3.jpg" class="card-img-top" alt="...">
+          <img src="/yashwebsite/images/instructor-3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text"><h4> John Bond</h4>
               Instructor</p>
           </div>
         </div>
         <div class="card p-2" style="width: 18rem;">
-          <img src="/images/instructor-4.jpg" class="card-img-top" alt="...">
+          <img src="/yashwebsite/images/instructor-4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">
               <h4> Sophia Smith</h4>
@@ -478,7 +478,7 @@
   <div class="container-fluid d-flex ">
     <div class="col-3 d-flex ">
 <div class="container ">
-<img src="/images/logo-2.png" class="img-fluid" alt="">
+<img src="/yashwebsite/images/logo-2.png" class="img-fluid" alt="">
 <p>
 We are providing high-quality online courses for about ten years. Our all instructors expert and highly experienced.
 </p>
@@ -502,12 +502,12 @@ We are providing high-quality online courses for about ten years. Our all instru
       <div class="container">
         <h5 class="pt-5 pb-3">Recents posts</h5 >
         <div class="d-flex ">
-          <img src="/images/client-1.jpg" class=" footer-imgs m-2 me-3" alt="">
+          <img src="/yashwebsite/images/client-1.jpg" class=" footer-imgs m-2 me-3" alt="">
           <p>Learn Webs Applications Development from Experts
             April 1, 2022</p>
         </div>
         <div class="d-flex">
-          <img src="/images/course-10.jpg"  class=" footer-imgs m-2 me-3" alt="">
+          <img src="/yashwebsite/images/course-10.jpg"  class=" footer-imgs m-2 me-3" alt="">
           <p>Learn Webs Applications Development from Experts
             April 1, 2022</p>
         </div>
