--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -60,7 +60,7 @@
   <div class="section-2  border   align-items-center">
     <div class="container-fluid ">
       <div class="row  section-2 d-flex justify-content-center align-items-center">
-        <div class="col-3 img-fluid d-flex justify-content-center align-items-center "> <img src="/images/logo.png"
+        <div class="col-3 img-fluid d-flex justify-content-center align-items-center "> <img src="/yashwebsite/images/logo.png"
             alt="" class=" logo-img img-fluid"></div>
         <div class="col-6">
           <div class="container">
