--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -26,8 +26,23 @@
 </head>
 
 <body>
-  <!-- section one started -->
+ <!-- toggle menu buttons used -->
+  <div class="row">
+    <div class="col-12 menu-buttons">
+      <div class="">
+  
+        <i class="fa-solid fa-xmark"></i>
+        <i class="fa-solid fa-bars"></i>
+  
+      </div>
+    </div>
+  </div>
+  
+ <!-- section one started -->
+  
   <section class="section-1 ">
+
+
     <div class="container-fluid">
       <div class="row img-responsive ">
         <div class="col-5 col-sm-12 col-xl-5  col-md-12 col-xxl-5 col-12">
@@ -476,7 +491,7 @@
   <div class="footer mt-5">
 <div class="row pt-5">
   <div class="container-fluid d-flex ">
-    <div class="col-3 d-flex ">
+    <div class="col-3  d-flex ">
 <div class="container ">
 <img src="/yashwebsite/images/logo-2.png" class="img-fluid" alt="">
 <p>
@@ -486,7 +501,7 @@ We are providing high-quality online courses for about ten years. Our all instru
 <i class="fa-brands fa-facebook"></i><i class="fa-brands fa-square-twitter"></i><i class="fa-brands fa-square-instagram"></i><i class="fa-brands fa-square-instagram"></i>
 </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 ">
 <div class="container d-flex justify-content-center align-items-center">
 <ul>
   <h5 class="pt-5 pb-3">CATEGORIES</h5 >
@@ -498,7 +513,7 @@ We are providing high-quality online courses for about ten years. Our all instru
 </ul>
 </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 ">
       <div class="container">
         <h5 class="pt-5 pb-3">Recents posts</h5 >
         <div class="d-flex ">
@@ -514,7 +529,7 @@ We are providing high-quality online courses for about ten years. Our all instru
       </div>
 
     </div>
-    <div class="col-3 flex-column  justify-content-around align-items-center">
+    <div class="col-3  flex-column  justify-content-around align-items-center">
       <h5 class="pt-5 pb-3">Contact us</h5 >
       <p>250/A Oval Street, Mount View, London, United Kingdom
         <br>
