--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="col-md-3 d-flex justify-content-end align-items-center">
+                        <div class="col-md-3 d-flex justify-content-end align-items-center btn3-wrap">
                             <div class="search-icon mx-2 p-3 shadow">
                                 <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
                             </div>
