--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <div class="row">
                     <div class="col-md-6 d-flex align-items-center">
                         <div class="info "><i class="fa-solid fa-envelope color-orange px-2"></i> info@webmail.com</div>
-                        <div class="location ps-md-1 ps-lg-5"><i class="fa-solid fa-location-dot color-orange px-2"></i>15/A, Nest
+                        <div class="location ps-md-1 ps-lg-5"><i
+                                class="fa-solid fa-location-dot color-orange px-2"></i>15/A, Nest
                             Tower, NYC</div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end align-items-center py-2 py-md-0">
@@ -37,7 +38,8 @@
                         <i class="fa-brands fa-twitter px-2 fs-5"></i>
                         <i class="fa-brands fa-instagram px-2 fs-5"></i>
                         <i class="fa-brands fa-dribbble px-2 fs-5"></i>
-                        <div class="header-btn ms-5 bg-orange p-1 p-md-2 p-lg-3 px-md-1 px-lg-4 text-center">Add Listing</div>
+                        <div class="header-btn ms-5 bg-orange p-1 p-md-2 p-lg-3 px-md-1 px-lg-4 text-center">Add Listing
+                        </div>
                     </div>
                 </div>
             </div>
@@ -252,7 +254,7 @@
     </section>
     <!--Section-4 End-->
     <!--Section-5 Start-->
-    <!-- <section class="aboout-us">
+    <section class="aboout-us">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -260,8 +262,7 @@
                         <div class="about mb-3 px-3 py-1">About Us</div>
                         <h1 class="about-head mb-3">Today Sells Properties</h1>
                         <p class="text-muted about-text">Houzez allow you to design unlimited panels and real estate
-                            custom
-                            forms to capture leads and keep record of all information</p>
+                            custom forms to capture leads and keep record of all information</p>
                     </div>
                     <ul>
                         <li class="mt-4">Live Music Cocerts at Luviana</li>
@@ -275,18 +276,24 @@
                         <li class="border-end px-3"><span class="d-flex">2</span> Car parking</li>
                         <li class="px-3"><span class="d-flex">3450</span> Square Ft</li>
                     </ul>
-                    <ul class="d-flex aboutUs-list-2">
-                        <li class="pe-3"><img src="images/about-us-01.jpg" alt="" width="160px" height="114px"></li>
-                        <li class="pe-3"><img src="images/about-us-02.jpg" alt="" width="160px" height="114px"></li>
-                        <li><img src="images/about-us-03.jpg" alt="" width="160px" height="114px"></li>
-                    </ul>
+                    <div class="row aboutUs-list-2">
+                        <div class="col-md-4">
+                            <img src="images/about-us-01.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-4">
+                            <img src="images/about-us-02.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-4">
+                            <img src="images/about-us-03.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <img src="images/about-us-04.jpg" alt="" class="img-fluid" width="540px">
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!--Section-5 End-->
 
     <!--Section-6 Start-->
