--- a/website-2/index.html
+++ b/website-2/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit</title>
-    <link rel="stylesheet" href="/Project/Angular-13/website-2/css/main.css">
+    <link rel="stylesheet" href="/website-2/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -44,7 +44,7 @@
                                     <a href="#" target="_blank">Register</a>
                                 </li>
                                 <li>
-                                    <img src="/Project/Angular-13/website-2/image/world.svg" alt="">
+                                    <img src="/website-2/image/world.svg" alt="">
                                     <select>
                                         <option selected>Language</option>
                                         <option value="1">English</option>
@@ -68,7 +68,7 @@
             <nav class="navbar bg-light">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="/Project/Angular-13/website-2/image/logo-header.png" alt="Elad">
+                        <img src="/website-2/image/logo-header.png" alt="Elad">
                     </a>
                     <div class="dropdown">
                         <a class="btn  dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="col-6 form-content1">
-                    <img src="/Project/Angular-13/website-2/image/from-img.png" alt="">
+                    <img src="/website-2/image/from-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -236,7 +236,7 @@
                     <div class="row card-img">
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/Project/Angular-13/website-2/image/destination1.png" class="card-img-top"
+                                <img src="/website-2/image/destination1.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 4 people</span>
@@ -246,7 +246,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/Project/Angular-13/website-2/image/destination2.png" class="card-img-top"
+                                <img src="/website-2/image/destination2.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 3 people</span>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/Project/Angular-13/website-2/image/destination3.png" class="card-img-top"
+                                <img src="/website-2/image/destination3.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 4 people</span>
@@ -266,7 +266,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/Project/Angular-13/website-2/image/destination4.png" class="card-img-top"
+                                <img src="/website-2/image/destination4.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 5 people</span>
@@ -288,7 +288,7 @@
             <div class="row" style="align-items:center ;">
                 <div class="col-6">
                     <div class="content-why">
-                        <img src="/Project/Angular-13/website-2/image/why-choose-us.png" alt="">
+                        <img src="/website-2/image/why-choose-us.png" alt="">
                     </div>
                 </div>
                 <div class="col-6">
@@ -347,7 +347,7 @@
                     <div class="row">
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/Project/Angular-13/website-2/image/property-img1.png" class="card-img-top"
+                                <img src="/website-2/image/property-img1.png" class="card-img-top"
                                     alt="...">
                                 <h3>Hotels</h3>
                                 <span>15,935 properties</span>
@@ -355,7 +355,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card2" style="width: 18rem;">
-                                <img src="/Project/Angular-13/website-2/image/property-img2.png" class="card-img-top"
+                                <img src="/website-2/image/property-img2.png" class="card-img-top"
                                     alt="...">
                                 <h3>Hotels</h3>
                                 <span>15,935 properties</span>
@@ -363,7 +363,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/Project/Angular-13/website-2/image/property-img3.png" class="card-img-top"
+                                <img src="/website-2/image/property-img3.png" class="card-img-top"
                                     alt="...">
                                 <h3>Cottages</h3>
                                 <span>7,531 properties</span>
@@ -371,7 +371,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/Project/Angular-13/website-2/image/property-img4.png" class="card-img-top"
+                                <img src="/website-2/image/property-img4.png" class="card-img-top"
                                     alt="...">
                                 <h3>Resorts</h3>
                                 <span>6,431 properties</span>
@@ -395,7 +395,7 @@
                     <!-- <div class="book-img"> -->
                         <!-- <div class="row"> -->
                             <div class="col-6">
-                                <img src="/Project/Angular-13/website-2/image/hotel1.jpg" class="img-fluid" alt="">
+                                <img src="/website-2/image/hotel1.jpg" class="img-fluid" alt="">
                                 <h3>The zero-star hotel</h3>
                             </div>
                         <!-- </div> -->
@@ -404,19 +404,19 @@
                 <div class="col-6">
                     <div class="row book-content-img1">
                         <div class="col-6">
-                            <img src="/Project/Angular-13/website-2/image/hotel2.jpg" class="img-fluid" alt="">
+                            <img src="/website-2/image/hotel2.jpg" class="img-fluid" alt="">
                             <h3>The juniper room</h3>
                         </div>
                         <div class="col-6">
-                            <img src="/Project/Angular-13/website-2/image/hotel3.jpg" class="img-fluid" alt="">
+                            <img src="/website-2/image/hotel3.jpg" class="img-fluid" alt="">
                             <h3>Swissotel in istanbul</h3>
                         </div>
                         <div class="col-6">
-                            <img src="/Project/Angular-13/website-2/image/hotel4.jpg" class="img-fluid" alt="">
+                            <img src="/website-2/image/hotel4.jpg" class="img-fluid" alt="">
                             <h3>Rock ranch hotel</h3>
                         </div>
                         <div class="col-6">
-                            <img src="/Project/Angular-13/website-2/image/hotel5.jpg" class="img-fluid" alt="">
+                            <img src="/website-2/image/hotel5.jpg" class="img-fluid" alt="">
                             <h3>Costa blanca hotel</h3>
                         </div>
                     </div>
@@ -438,15 +438,15 @@
                         eget malesuada.</p>
                     <div class="play-store-btn">
                         <a href="#" target="_blank">
-                            <img src="/Project/Angular-13/website-2/image/google-play.png" alt="">
+                            <img src="/website-2/image/google-play.png" alt="">
                         </a>
                         <a href="#" target="_blank">
-                            <img src="/Project/Angular-13/website-2/image/apple-store.png" alt="">
+                            <img src="/website-2/image/apple-store.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-6 play-store-img">
-                    <img src="/Project/Angular-13/website-2/image/play-store-img.png" alt="">
+                    <img src="/website-2/image/play-store-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -464,14 +464,14 @@
             </div>
             <div class="row">
                 <div class="col-3 guest1">
-                    <img src="/Project/Angular-13/website-2/image/guest1.jpg" alt="">
+                    <img src="/website-2/image/guest1.jpg" alt="">
                     <h3>Riley Mercedes</h3><span>Orlando</span>
                     <p>“Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus
                         nibh. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Curabitur
                         non nulla sit amet nisl tempus convallis quis ac lectus.”</p>
                 </div>
                 <div class="col-3 guest1">
-                    <img src="/Project/Angular-13/website-2/image/guest2.jpg" alt="">
+                    <img src="/website-2/image/guest2.jpg" alt="">
                     <h3>Odessa Nolette</h3><span>Los Angeles</span>
                     <p>“Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus
                         nibh.
@@ -480,7 +480,7 @@
                         sit amet nisl tempus convallis quis ac lectus.”</p>
                 </div>
                 <div class="col-3 guest1">
-                    <img src="/Project/Angular-13/website-2/image/guest3.jpg" alt="">
+                    <img src="/website-2/image/guest3.jpg" alt="">
                     <h3>Charles Betances</h3><span>Atlanta</span>
                     <p>“Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus
                         nibh.
@@ -489,7 +489,7 @@
                         sit amet nisl tempus convallis quis ac lectus.”</p>
                 </div>
                 <div class="col-3 guest1">
-                    <img src="/Project/Angular-13/website-2/image/guest4.jpg" alt="">
+                    <img src="/website-2/image/guest4.jpg" alt="">
                     <h3>Riley Mercedes</h3><span>Orlando</span>
                     <p>“Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus
                         nibh.
@@ -508,7 +508,7 @@
             <div class="row book-flight">
                 <div class="col-6">
                     <div class="content-why">
-                        <img src="/Project/Angular-13/website-2/image/book-flight-img.png" alt="">
+                        <img src="/website-2/image/book-flight-img.png" alt="">
                     </div>
                 </div>
                 <div class="col-6">
@@ -579,7 +579,7 @@
             <div class="row">
                 <div class="col-4">
                     <a class="navbar-brand" href="#">
-                        <img src="/Project/Angular-13/website-2/image/logo-footer.png" alt="Elad" width="70"
+                        <img src="/website-2/image/logo-footer.png" alt="Elad" width="70"
                             height="35">
                     </a>
                     <p>Lorem Ipsum is simply dummy text of the printing and type setting at industry. Lorem Ipsum
