--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -22,8 +22,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- css link  -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="JavaScript" href="/yashwebsite/javasctipt.js">
 </head>
-</head>
+
 
 <body>
  <!-- toggle menu buttons used -->
@@ -31,10 +32,24 @@
     <div class="col-12 menu-buttons">
       <div class="">
   
-        <i class="fa-solid fa-xmark"></i>
-        <i class="fa-solid fa-bars"></i>
+       
+        <i class="fa-solid fa-bars" onclick="show()"></i>
   
       </div>
+    </div>
+  </div>
+  <div class="menu-chart">
+    <i class="fa-solid fa-xmark"></i>
+    <div class="container">
+      <ul class="d-flex fs-6  first-ul">
+        <li><a href="" class=" pe-2 ps-2">Home</a></li>
+        <li><a href="" class=" pe-2 ps-2">Pages</a></li>
+        <li><a href="#categories-section" class=" pe-2 ps-2">Courses</a></li>
+        <li><a href="" class=" pe-2 ps-2">Webinars</a></li>
+        <li><a href="" class=" pe-2 ps-2">Blog</a></li>
+        <li><a href="" class=" pe-2 ps-2">contact</a></li>
+        <li><a href="" class=" pe-2 ps-2"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a></li>
+      </ul>
     </div>
   </div>
   
